Revision history for {{$dist->name}}

{{$NEXT}}

0.14      2015-02-13 12:54:53 CET

    - Fix segmentation fault that happens under uWSGI when loading the
      module without starting the profiler

0.13      2015-01-27 17:03:19 CET

    - Speed up aggregation when there is an high number of child
      processes.

0.12      2014-12-30 09:54:29 CET

    - Make tables sortable
    - Move list of all files to a separate page
    - Use multiple directory levels for saved eval "" source code
    - Handle lexical subroutines

0.11      2014-12-05 10:31:08 CET

    - Test fix for Perl 5.14

0.10      2014-12-05 10:17:57 CET

    - Fix incorrect section attribution for the first/last
      sample of a section

0.09      2014-12-01 21:42:34 CET

    - Saner API to get the final merged report object

0.08      2014-11-27 17:15:41 CET

    - Fix glitch in the collection of eval BLOCK stack frames

0.07      2014-11-24 11:37:21 CET

    - Allow changing source code saving policy while profiling

0.06      2014-11-21 22:24:46 CET

    - Fix compressed report generation for #line-mapped files

0.05      2014-11-20 23:08:26 CET

    - Fix race condition when loading merged report

0.04      2014-11-19 23:47:19 CET

    - Test fixes for Perl 5.14
    - Optionally Gzip-compress generated HTML/SVG files

0.03      2014-11-18 12:36:18 CET

    - Do not report eval BLOCK stack frames
    - Allow running aggregation on multiple hosts
    - Minor tweaks to aggregation code

0.02      2014-10-07 08:46:13 CEST

    - Uniquely identify BEGIN blocks and anonymous subs
    - Made the report more complete, more usable, less hideous
    - Windows/Mac OS X portability
    - Switch to Text::MicroTemplate

0.01      2014-09-01 20:49:35 CEST

    - First public release