@@ -1123,8 +1123,10 @@ devel::statprofiler::write_custom_metadata(pTHX_ SV *key, SV *value)
 {
     dMY_CXT;
 
-    if (MY_CXT.enabled)
+    if (MY_CXT.enabled) {
+        MY_CXT.create_trace(aTHX);
         MY_CXT.trace->write_custom_metadata(key, value);
+    }
 }
 
 void
@@ -1132,8 +1134,10 @@ devel::statprofiler::start_section(pTHX_ SV *section_name)
 {
     dMY_CXT;
 
-    if (MY_CXT.enabled)
+    if (MY_CXT.enabled) {
+        MY_CXT.create_trace(aTHX);
         MY_CXT.trace->start_section(section_name);
+    }
 }
 
 void
@@ -1141,8 +1145,10 @@ devel::statprofiler::end_section(pTHX_ SV *section_name)
 {
     dMY_CXT;
 
-    if (MY_CXT.enabled)
+    if (MY_CXT.enabled) {
+        MY_CXT.create_trace(aTHX);
         MY_CXT.trace->end_section(section_name);
+    }
 }
 
 int
